storage-tools/pgweb/overlays/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pgweb
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: host.pl
      http:
        paths:
          - path: /pgweb/(.*)
            backend:
              serviceName: prod-pgweb
              servicePort: 80
  tls:
    - hosts:
        - host.pl
      secretName: prod-tls-secret-pgweb
